<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/second_color_theme"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="170dp"
            android:layout_height="230dp"
            android:contentDescription="@string/movie_image_desc"
            android:paddingTop="10dp"
            android:src="@drawable/ic_notifications_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/home_aranha_title"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/movie_image"
            app:layout_constraintStart_toStartOf="@id/movie_image"
            app:layout_constraintTop_toBottomOf="@id/movie_image" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/preco2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <LinearLayout
            android:padding="5dp"
            android:id="@+id/addToCartButton"
            android:background="@color/color_button"
            android:layout_width="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_height="40dp"
            android:layout_marginVertical="6dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price"
            android:gravity="center">

            <ImageView
                android:id="@+id/cartIcon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/carrinho" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/cartCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:layout_marginEnd="15dp"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:padding="4dp"
                android:gravity="center_vertical" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/addToCartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_ao_carrinho"
                android:textColor="@android:color/white"
                android:gravity="center_vertical" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>